--- a/src/main/resources/templates/hotel/info.html
+++ b/src/main/resources/templates/hotel/info.html
@@ -1,17 +1,24 @@
 <!doctype html>
-<html lang="ko">
+<html lang="ko" xmlns:th="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <link rel="stylesheet" th:href="@{/resources/stylesheets/common.css}">
-    <link rel="stylesheet" th:href="@{/hotel/resources/stylesheets/info.css}">
     <title>Document</title>
+
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/info.css}">
+
+
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: header}"></th:block>
+
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
+
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
@@ -38,7 +45,7 @@
     </div>
 </main>
 
-<th:block th:replace="~{fragments.html :: footer}"></th:block>
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
 
 </body>
 </html>
