--- a/src/main/resources/templates/hotel/reservationStep1.html
+++ b/src/main/resources/templates/hotel/reservationStep1.html
@@ -5,22 +5,28 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <link rel="stylesheet" th:href="@{/resources/stylesheets/common.css}">
-    <link rel="stylesheet" th:href="@{/hotel/resources/stylesheets/reservationStep1.css}">
 
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <!-- datePicker -->
-    <link href="/resources/stylesheets/datepicker.min.css" rel="stylesheet" type="text/css" media="all">
-    <script src="/resources/scripts/datepicker.js"></script>
-    <script src="/resources/scripts/datepicker.ko.js"></script>
+    <!--  cdns  -->
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
 
+    <!--    common.css  -->
+    <link rel="stylesheet" href="/css/common.css">
+    <!--    reservationStep1.css  -->
+    <link rel="stylesheet" href="/css/reservationStep1.css">
+    <!--    datepicker.css  -->
+    <link href="/js/datepicker.min.css" rel="stylesheet" >
+
+
+    <!-- js    -->
+    <script defer src="/js/datepicker.js"></script>
+    <script defer src="/js/datepicker.ko.js"></script>
     <title>Document</title>
 </head>
 <body>
 
-<th:block th:replace="~{fragments.html :: header}"></th:block>
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
@@ -32,9 +38,11 @@
             <span class="line"></span>
             <span class="step">2</span>
         </div>
-        <thblock th:replace="~{fragments.html :: search-container}"></thblock>
+
+        <thblock th:replace="~{fragments/fragments.html :: search-container}"></thblock>
+
         <div class="room-container">
-            <img th:src="@{/hotel/resources/images/sample.jpg}" alt="">
+            <img th:src="@{/images/sample.png}" alt="">
             <form action="/hotel/reservationStep2" method="get" class="reservation-form">
                 <div class="room-info-container">
                     <div class="room-name">프리미엄 디럭스</div>
@@ -49,7 +57,7 @@
             </form>
         </div>
         <div class="room-container">
-            <img th:src="@{/hotel/resources/images/sample.jpg}" alt="">
+            <img th:src="@{/images/sample.png}" alt="">
             <form action="/hotel/reservationStep2" method="post" class="reservation-form">
                 <div class="room-info-container">
                     <span class="room-name">프리미엄 디럭스</span>
@@ -66,7 +74,8 @@
     </div>
 </main>
 
-<th:block th:replace="~{fragments.html :: footer}"></th:block>
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
+
 
 <!-- script test -->
 <script>
