--- a/src/main/resources/templates/hotel/reservationStep2.html
+++ b/src/main/resources/templates/hotel/reservationStep2.html
@@ -5,14 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <link rel="stylesheet" th:href="@{/resources/stylesheets/common.css}">
-    <link rel="stylesheet" th:href="@{/hotel/resources/stylesheets/reservationStep2.css}">
+
+    <!--  cdns  -->
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
+
+    <!--    common.css  -->
+    <link rel="stylesheet" href="/css/common.css">
+    <!--    reservationStep1.css  -->
+    <link rel="stylesheet" href="/css/reservationStep2.css">
+
+
+
     <title>예약 확인 및 결제</title>
 </head>
 <body>
 
-<th:block th:replace="~{fragments.html::header}"></th:block>
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
@@ -27,7 +37,7 @@
         <div class="confirmation-payment-container">
             <div class="confirmation-container">
                 <div class="image-container">
-                    <img th:src="@{/hotel/resources/images/sample.jpg}" alt="">
+                    <img th:src="@{/images/sample.jpg}" alt="">
                 </div>
                 <ul class="info">
                     <li>
@@ -67,7 +77,7 @@
     </div>
 </main>
 
-<th:block th:replace="~{fragments.html::footer}"></th:block>
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
 
 </body>
 </html>
