--- a/src/main/resources/templates/hotel/findMap.html
+++ b/src/main/resources/templates/hotel/findMap.html
@@ -5,23 +5,33 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <link rel="stylesheet" th:href="@{/resources/stylesheets/common.css}">
-    <link rel="stylesheet" th:href="@{/hotel/resources/stylesheets/findMap.css}">
+
+    <!--  cdns  -->
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
+
+    <!-- common.css -->
+    <link rel="stylesheet" href="/css/common.css">
+    <!-- findMap.css -->
+    <link rel="stylesheet" href="/css/findMap.css">
+
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ea7f9c895362adfeaa8d4cec51df919e&libraries=services"></script>
-    <script defer th:src="@{/hotel/resources/scripts/findMap.js}"></script>
+    <script defer src="/js/findMap.js"></script>
     <title>Document</title>
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: header}"></th:block>
+
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <th:block th:replace="~{fragments.html :: findTop}"></th:block>
+        <th:block th:replace="~{fragments/fragments.html :: findTop}"></th:block>
         <div id="map"></div>
     </div>
 </main>
 
-<th:block th:replace="~{fragments.html :: footer}"></th:block>
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
+
 </body>
 </html>
