--- a/src/main/resources/templates/hotel/reservationStep1.html
+++ b/src/main/resources/templates/hotel/reservationStep1.html
@@ -14,12 +14,14 @@
     <!--    reservationStep1.css  -->
     <link rel="stylesheet" href="/css/reservationStep1.css">
     <!--    datepicker.css  -->
-    <link href="/js/datepicker.min.css" rel="stylesheet" >
+    <link href="/css/datepicker.min.css" rel="stylesheet" type="text/css" media="all">
 
 
     <!-- js    -->
     <script defer src="/js/datepicker.js"></script>
     <script defer src="/js/datepicker.ko.js"></script>
+    <script defer src="/js/reservationStep1.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -75,21 +77,6 @@
 </main>
 
 <th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
-
-
-<!-- script test -->
-<script>
-    $('.checkin')
-        .datepicker({
-            dateFormat: 'yyyy-mm-dd',
-            language: 'ko',
-        });
-
-    $('.checkout')
-        .datepicker({
-            language: 'ko'
-        });
-</script>
 
 </body>
 </html>
