teacher is merged

--- a/src/main/resources/templates/hotel/reservationStep2.html
+++ b/src/main/resources/templates/hotel/reservationStep2.html
@@ -58,7 +58,7 @@
                 <div class="payment-left">
                     <span class="text subtitle">예약자 정보</span>
                     <div class="user-info-container">
-                        <span class="text">예약자 정보(이름, 연락처 등)</span>
+                        <span class="text">예약자 정보(이름, 연락처 등) <br> SecurityContextHolder로 정보 가져올 예정</span>
                     </div>
                     <span class="text subtitle">결제 수단</span>
                     <div class="payment-method-container">
