--- a/src/main/resources/templates/hotel/find.html
+++ b/src/main/resources/templates/hotel/find.html
@@ -12,11 +12,11 @@
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
     <!--    homepage.css  -->
-    <link rel="stylesheet" href="/css/find.css">
+    <link rel="stylesheet" href="/css/hotel/find.css">
 
 
     <!--    js  -->
-    <script defer src="/js/find.js"></script>
+    <script defer src="/js/hotel/find.js"></script>
 
     <title>Document</title>
 </head>
