--- a/src/main/resources/templates/hotel/findMap.html
+++ b/src/main/resources/templates/hotel/findMap.html
@@ -12,10 +12,10 @@
     <!-- common.css -->
     <link rel="stylesheet" href="/css/common.css">
     <!-- findMap.css -->
-    <link rel="stylesheet" href="/css/findMap.css">
+    <link rel="stylesheet" href="/css/hotel/findMap.css">
 
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ea7f9c895362adfeaa8d4cec51df919e&libraries=services"></script>
-    <script defer src="/js/findMap.js"></script>
+    <script defer src="/js/hotel/findMap.js"></script>
     <title>Document</title>
 </head>
 <body>
