--- a/src/main/resources/templates/hotel/reservationStep2.html
+++ b/src/main/resources/templates/hotel/reservationStep2.html
@@ -12,7 +12,7 @@
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
     <!--    reservationStep1.css  -->
-    <link rel="stylesheet" href="/css/reservationStep2.css">
+    <link rel="stylesheet" href="/css/hotel/reservationStep2.css">
 
 
 
@@ -37,7 +37,7 @@
         <div class="confirmation-payment-container">
             <div class="confirmation-container">
                 <div class="image-container">
-                    <img th:src="@{/images/sample.jpg}" alt="">
+                    <img th:src="@{/images/sample.png}" alt="">
                 </div>
                 <ul class="info">
                     <li>
