--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>detail</title>
-    <link rel="stylesheet" th:href="@{/board/resources/stylesheets/detail.css}">
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <script defer th:src="@{/board/resources/js/detail.js}"></script>
+    <!--  cdns  -->
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
+
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/board/detail.css">
+    <script defer src="/js/board/detail.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -69,7 +72,9 @@
 <div id="comment-list">
 
 </div>
-<th:block th:replace="~{fragments.html :: footer}"></th:block>
+
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
+
 </body>
 <script th:inline="javascript">
     const commentWrite = () => {
