--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>update</title>
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <link rel="stylesheet" href="/board/resources/stylesheets/update.css">
+
+    <!--  cdns  -->
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
+
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/board/update.css">
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: header}"></th:block>
+
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
+
 <form id="mainForm" th:action="@{'/board/update'}" method="post" name="updateForm">
     <input type="hidden" name="id" th:value="${boardUpdate.id}"/>
     <div>
@@ -32,7 +40,10 @@
 <span class="button mt-3">
     <button class="btn btn-primary mb-3" onclick="listReq()">목록</button>
 </span>
-<th:block th:replace="~{fragments.html :: footer}"></th:block>
+
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
+
+
 </body>
 <script th:inline="javascript">
     const boardUpdate = function (){
