--- a/src/main/resources/templates/hotel/info.html
+++ b/src/main/resources/templates/hotel/info.html
@@ -9,7 +9,7 @@
 
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
     <link rel="stylesheet" th:href="@{/css/common.css}">
-    <link rel="stylesheet" th:href="@{/css/info.css}">
+    <link rel="stylesheet" th:href="@{/css/hotel/info.css}">
 
 
 </head>
