--- a/src/main/resources/templates/hotel/reservationStep1.html
+++ b/src/main/resources/templates/hotel/reservationStep1.html
@@ -12,7 +12,7 @@
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
     <!--    reservationStep1.css  -->
-    <link rel="stylesheet" href="/css/reservationStep1.css">
+    <link rel="stylesheet" href="/css/hotel/reservationStep1.css">
     <!--    datepicker.css  -->
     <link href="/css/datepicker.min.css" rel="stylesheet" type="text/css" media="all">
 
@@ -20,7 +20,7 @@
     <!-- js    -->
     <script defer src="/js/datepicker.js"></script>
     <script defer src="/js/datepicker.ko.js"></script>
-    <script defer src="/js/reservationStep1.js"></script>
+    <script defer src="/js/hotel/reservationStep1.js"></script>
 
     <title>Document</title>
 </head>
