게시판 전체 수정 로그인된 사용자만 수정,작성, 삭제 가능

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/board/resources/stylesheets/list.css">
-    <th:block th:insert="~{fragments.html :: headCdns}"></th:block>
-    <script defer th:src="@{/board/resources/js/list.js}"></script>
+    <link rel="stylesheet" href="/css/board/list.css">
+    <th:block th:insert="~{/fragments/fragments.html :: headCdns}"></th:block>
+    <script defer src="/js/board/list.js"></script>
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: header}"></th:block>
+<th:block th:replace="~{/fragments/header.html :: header_fragment}"></th:block>
 <h2 style="margin: 20px">게시판</h2>
 <form class="row g-3 d-flex justify-content-end" method="get" th:action="@{/board/list}">
     <div class="col-auto">
@@ -29,7 +29,6 @@
         <th class="ten wide">글제목</th>
         <th class="two wide">작성자</th>
         <th class="three wide">작성일</th>
-        <th class="three wide">조회수</th>
     </tr>
     </thead>
     <tbody>
@@ -40,44 +39,23 @@
         </td>
         <td>
             <a th:href="@{'/board/' + ${board.id}}">
-                <span th:text="${board.boardTitle}"></span>
+                <span th:text="${board.title}"></span>
             </a>
         </td>
         <td>
-            <span th:text="${board.boardWriter}"></span>
+            <span th:text="${board.username}"></span>
         </td>
         <td>
-            <span th:text="${#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
-        </td>
-        <td>
-            <span th:text="${board.boardHits}"></span>
+            <span th:text="${#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></span>
         </td>
     </tr>
     </tbody>
 </table>
-
-<nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-        <li class="page-item" th:classappend="${1 == boardList.pageable.pageNumber + 1} ? 'disabled'">
-            <a class="page-link" href="#" th:href="@{/board/list(page=${boardList.pageable.pageNumber - 1})}"
-               tabindex="-1" aria-disabled="true">Previous</a>
-        </li>
-        <li class="page-item" th:classappend="${i == boardList.pageable.pageNumber + 1} ? 'disabled'"
-            th:each="i : ${#numbers.sequence(startPage, endPage)}">
-            <a class="page-link" href="#" th:href="@{/board/list(page=${i - 1})}" th:text="${i}">1</a>
-        </li>
-        <li class="page-item"
-            th:classappend="${boardList.totalPages == boardList.pageable.pageNumber + 1} ? 'disabled'">
-            <a class="page-link" href="#" th:href="@{/board/list(page=${boardList.pageable.pageNumber + 1})}">Next</a>
-        </li>
-    </ul>
-
-</nav>
-<th:block th:replace="~{fragments.html :: footer}"></th:block>
+<th:block th:replace="~{/fragments/footer.html :: footer_fragment}"></th:block>
 </body>
 <script>
     const saveReq = () => {
-        location.href = "/board/save";
+        location.href = "/board/write";
     }
 
 </script>
