--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -13,7 +13,7 @@
 <form class="row g-3 d-flex justify-content-end" method="get" th:action="@{/board/list}">
     <div class="col-auto">
         <label for="searchText" class="visually-hidden">검색</label>
-        <input type="text" class="form-control" id="searchText" name="searchText" placeholder="검색">
+        <input type="text" class="form-control" id="searchText" name="keyword" placeholder="검색">
     </div>
     <div class="col-auto">
         <button type="submit" class="btn btn-light mb-3" style="margin-right: 50px">검색</button>
@@ -51,6 +51,40 @@
     </tr>
     </tbody>
 </table>
+<div th:if="${!boardList.isEmpty()}">
+    <ul class="pagination"
+        th:with="
+            pageNumber = ${boardList.pageable.pageNumber},
+            pageSize = ${boardList.pageable.pageSize},
+            totalPages = ${boardList.totalPages},
+            startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},
+            tempEndPage = ${startPage + pageSize - 1},
+            endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})">
+
+        <li th:classappend="${boardList.first} ? 'disabled'" class="page-item">
+            <a class="page-link" th:if="${param.keyword == null}" th:href="${boardList.first} ? '#' : @{/board/list(page=${pageNumber - 1})}" aria-label="Previous">
+                <span aria-hidden="true">&lt;</span>
+            </a>
+            <a class="page-link" th:if="${param.keyword != null}" th:href="${boardList.first} ? '#' : @{/board/list(page=${pageNumber - 1}, keyword=${param.keyword})}" aria-label="Previous">
+                <span aria-hidden="true">&lt;</span>
+            </a>
+        </li>
+
+        <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+            <a th:text="${page}" th:if="${param.keyword == null}" class="page-link" th:href="@{/board/list(page=${page - 1})}"></a>
+            <a th:text="${page}" th:if="${param.keyword != null}" class="page-link" th:href="@{/board/list(page=${page - 1}, keyword=${param.keyword})}"></a>
+        </li>
+
+        <li th:classappend="${boardList.last} ? 'disabled'" class="page-item">
+            <a class="page-link" th:if="${param.keyword == null}" th:href="${boardList.last} ? '#' : @{/board/list(page=${pageNumber + 1})}" aria-label="Next">
+                <span aria-hidden="true">&gt;</span>
+            </a>
+            <a class="page-link" th:if="${param.keyword != null}" th:href="${boardList.last} ? '#' : @{/board/list(page=${pageNumber + 1}, keyword=${param.keyword})}" aria-label="Next">
+                <span aria-hidden="true">&gt;</span>
+            </a>
+        </li>
+    </ul>
+</div>
 <th:block th:replace="~{/fragments/footer.html :: footer_fragment}"></th:block>
 </body>
 <script>
