--- a/src/main/resources/templates/hotel/reservationStep1.html
+++ b/src/main/resources/templates/hotel/reservationStep1.html
@@ -41,7 +41,7 @@
             <span class="step">2</span>
         </div>
 
-        <thblock th:replace="~{fragments/fragments.html :: search-container}"></thblock>
+        <thblock th:replace="~{fragments/search.html :: search-form}"></thblock>
 
         <div class="room-container">
             <img th:src="@{/images/sample.png}" alt="">
