--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="content-container">
-        <thblock th:replace="~{fragments/search.html :: search-container}"></thblock>
+        <thblock th:replace="~{fragments/search.html :: search-form}"></thblock>
         주변 여행지나 아무 콘텐츠
     </div>
 </main>
