--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -211,39 +211,30 @@ button {
     padding-right: 1.25rem;
 }
 
-.search-container {
+
+#searchForm {
     height: 100px;
 
-    align-items: stretch;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    border-bottom: 0.0625rem solid #9c9c9c;
-}
-
-.search-container > .search-form {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    border-bottom: 0.0625rem solid #9c9c9c;
 }
 
-.search-container > .search-form input {
+#searchForm input {
     cursor: pointer;
     border: none;
 }
 
-.search-container > .search-form input::placeholder {
-}
-
-.search-container > .search-form > .search-button {
+#searchForm > .search-button {
     padding: 0.925rem 3rem;
     border-radius: 0.375rem;
     border: 0.0625rem solid #ffffff;
 }
 
-.search-container > .search-form > .search-item:nth-child(4) {
+#searchForm > .label.person {
     margin-right: 5rem;
 
     display: flex;
@@ -251,39 +242,43 @@ button {
     justify-content: space-between;
 }
 
-.search-container > .search-form > .search-item:nth-child(4) input {
+#searchForm > .label.hotel > .link {
+    white-space: nowrap;
+}
+
+#searchForm > .label.hotel > .link > .icon {
+    height: 1.25rem;
+    margin-bottom: 0.275rem;
+}
+
+#searchForm > .label.person input {
     pointer-events: none;
     width: 30px;
 }
 
-.search-container > .search-form > .search-item:nth-child(4) input::placeholder {
+#searchForm > .label.person input::placeholder {
     text-align: center;
 }
 
 
-.search-container > .search-form > .search-item:nth-child(4) > .adult-container {
+#searchForm > .label.person > .adult-container {
     margin-right: 2rem;
     text-align: center;
 }
 
-.search-container > .search-form > .search-item:nth-child(4) > .adult-container > .count-container,
-.search-container > .search-form > .search-item:nth-child(4) > .child-container > .count-container{
+#searchForm > .label.person > .adult-container > .count-container,
+#searchForm > .label.person > .child-container > .count-container{
     align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
 }
 
-.search-container > .search-form > .search-item:nth-child(4) > .child-container {
+#searchForm > .label.person > .child-container {
     text-align: center;
 }
 
-.search-container > .search-form > .search-item:first-child > .search > .icon {
-    height: 1.25rem;
-    margin-bottom: 0.275rem;
-}
-
-.search-container > .search-form > .search-item:nth-child(4) .icon {
+#searchForm > .label.person .icon {
     height: 1.125rem;
     margin-bottom: 0.25rem;
 }
