--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -11,6 +11,7 @@
 
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/user/login.css">
 
     <title>로그인</title>
 
