댓글기능수정및 검색기능 추가 수정해야함

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -46,7 +46,7 @@
             <span th:text="${board.username}"></span>
         </td>
         <td>
-            <span th:text="${#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></span>
+            <span th:text="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
         </td>
     </tr>
     </tbody>
