--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
     <th:block th:insert="~{/fragments/fragments.html :: headCdns}"></th:block>
+
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/board/write.css">
 </head>
-<header></header>
 <body>
-<th:block th:replace="~{/fragments/header.html :: header_fragment}"></th:block>
+
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
+
 <!-- action속성 : 목적지(서버주소)-->
 <form id="mainForm" action="/board/write" method="post">
     <div>
