--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -12,6 +12,11 @@
 <h2 style="margin: 20px">게시판</h2>
 <form class="row g-3 d-flex justify-content-end" method="get" th:action="@{/board/list}">
     <div class="col-auto">
+        <select name="type">
+            <option value='T'>제목별</option>
+            <option value='C'>내용</option>
+            <option value='W'>작성자별</option>
+        </select>
         <label for="searchText" class="visually-hidden">검색</label>
         <input type="text" class="form-control" id="searchText" name="keyword" placeholder="검색">
     </div>
@@ -26,9 +31,10 @@
     <thead>
     <tr>
         <th>번호</th>
-        <th class="ten wide">글제목</th>
-        <th class="two wide">작성자</th>
-        <th class="three wide">작성일</th>
+        <th>글제목</th>
+        <th>작성자</th>
+        <th>작성일</th>
+        <th>댓글작성여부</th>
     </tr>
     </thead>
     <tbody>
@@ -48,9 +54,14 @@
         <td>
             <span th:text="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
         </td>
+<!--        <td>-->
+<!--            <button th:text="${board.comments ? '답변완료' : '미답변'}"></button>-->
+<!--        </td>-->
     </tr>
     </tbody>
 </table>
+
+<!--페이징 처리-->
 <div th:if="${!boardList.isEmpty()}">
     <ul class="pagination"
         th:with="
