--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -33,7 +33,7 @@
             <div class="mb-3">
                 <label for="createdAt" class="form-label">작성일</label>
                 <input type="text" class="form-control" id="createdAt" name="createdAt"
-                       th:value="${#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm')}" disabled>
+                       th:value="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm')}" disabled>
             </div>
             <div class="mb-3">
                 <label for="writer" class="form-label">작성자</label>
