--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
 
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
-    <!--    homepage.css  -->
-    <link rel="stylesheet" href="/css/homepage.css">
+    <!--    index.css  -->
+    <link rel="stylesheet" href="/css/index.css">
     <!-- datePicker's css -->
     <link href="/css/datepicker.min.css" rel="stylesheet" type="text/css" media="all">
 
@@ -21,7 +21,7 @@
     <!-- js    -->
     <script defer src="/js/datepicker.js"></script>
     <script defer src="/js/datepicker.ko.js"></script>
-    <script defer src="/js/homepage.js"></script>
+    <script defer src="/js/index.js"></script>
 
 
 </head>
