--- a/src/main/resources/static/css/hotel/info.css
+++ b/src/main/resources/static/css/hotel/info.css
@@ -1,21 +1,21 @@
 .info-container {
     margin: 5rem 0;
 
+    align-items: flex-start;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 .info-container h1 {
     font-size: 2rem;
     font-weight: 500;
-    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
-.info-container > .menu {
-    padding: 1.5rem 1rem;
+.info-container > .info-left {
+    padding: 1rem;
     width: 200px;
-    height: 280px;
     border: 0.0625rem solid #4a4a4a;
 
     display: flex;
@@ -23,32 +23,39 @@
     justify-content: flex-start;
 }
 
-.info-container > .menu h1 {
+.info-container .title-container {
     border-bottom: 0.3rem solid #4a4a4a;
 }
 
-.info-container > .menu > .link-container {
+
+.info-container > .info-left > .menu > .link-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin: 0.4rem 0;
 }
 
-.info-container > .menu > .link-container > .link {
-    margin: 0.4rem 0;
+.info-container > .info-left > .menu > .link-container > .link {
+    margin: 0.5rem 0;
 }
 
 
-.info-container > .info {
+.info-container > .info-right {
     width: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 
-    padding-left: 5rem;
+    padding: 1rem 1rem 1rem 5rem;
 }
 
-.info-container > .info img {
-    border-top: 0.3rem solid #4a4a4a;
-    padding-top: 1rem;
+.info-container > .info-right img {
+    width: 70%;
+}
+
+.info-container > .info-right > .image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-top: 1.75rem;
 }
