--- a/src/main/resources/templates/hotel/find.html
+++ b/src/main/resources/templates/hotel/find.html
@@ -11,7 +11,7 @@
 
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
-    <!--    homepage.css  -->
+    <!--    index.css  -->
     <link rel="stylesheet" href="/css/hotel/find.css">
 
 
@@ -28,7 +28,7 @@
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <th:block th:replace="~{fragments/fragments.html :: findTop}"></th:block>
+        <th:block th:replace="~{fragments/findTop.html :: findTop_fragment}"></th:block>
         <div class="list-container">
             <div class="subtitle-container">
                 <h1 class="subtitle">한국</h1>
