--- a/src/main/resources/templates/hotel/findMap.html
+++ b/src/main/resources/templates/hotel/findMap.html
@@ -26,7 +26,7 @@
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <th:block th:replace="~{fragments/fragments.html :: findTop}"></th:block>
+        <th:block th:replace="~{fragments/findTop.html :: findTop_fragment}"></th:block>
         <div id="map"></div>
     </div>
 </main>
