--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -26,7 +26,7 @@
       <div class="join_wrapper">
         <div>
           <label>아이디</label><span th:text="${user_id}" id="id_msg" class="msg"></span> <br/>
-          <input name="id" id="id" placeholder="아이디"/> <button type="button" class="btn btn-secondary search_addr_btn" onclick="IdCheck()">중복확인</button> <br/>
+          <input name="userid" id="userid" placeholder="아이디"/> <button type="button" class="btn btn-secondary search_addr_btn" onclick="IdCheck()">중복확인</button> <br/>
         </div>
         <div>
           <label>비밀번호</label><span th:text="${password}" id="pw_msg" class="msg"></span> <br/>
@@ -81,7 +81,7 @@
 
 <script>
   const IdCheck = function(){
-    const user_id = document.joinform.id.value;
+    const user_id = document.joinform.userid.value;
     const id_msg = document.querySelector('#id_msg');
     let regexpId = new RegExp("^[A-Za-z0-9]{6,16}$");
     if(regexpId.test(user_id.trim())) {
