--- a/src/main/resources/templates/admin/reservationStatus.html
+++ b/src/main/resources/templates/admin/reservationStatus.html
@@ -35,9 +35,9 @@
                         <h2 class="subtitle">예약현황</h2>
                     </div>
                     <div class="link-container">
-                        <a href="/admin/reservationStatus?region=서울" class="link">서울</a>
-                        <a href="/admin/reservationStatus" class="link">부산</a>
-                        <a href="/admin/reservationStatus" class="link">울산</a>
+                        <a href="/admin/reservationStatus?region=seoul" class="link">서울</a>
+                        <a href="/admin/reservationStatus?region=busan" class="link">부산</a>
+                        <a href="/admin/reservationStatus?region=ulsan" class="link">울산</a>
                     </div>
                     <div class="subtitle-container">
                         <h2 class="subtitle">문의내역</h2>
@@ -66,7 +66,13 @@
             </div>
             <div class="admin-right">
                 <div class="title-container">
-                    <h1 class="title">예약현황 > 서울</h1>
+                    <h1 class="title">예약현황 >
+                        <span th:switch="${region}">
+                            <span th:case='seoul'>서울</span>
+                            <span th:case='busan'>부산</span>
+                            <span th:case='ulsan'>울산</span>
+                        </span>
+                    </h1>
                 </div>
                 <div class="reservation-table-container">
                     <span class="text">예약 테이블 공간(reservation table에서 데이터 가져와서 게시판 형식으로 나열. 취소 버튼을 만들어서 예약 및 결제 취소 되도록 할 예정)</span>
