--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -11,10 +11,8 @@
 
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
-    <!--    homepage.css  -->
-    <link rel="stylesheet" href="/css/homepage.css">
     <!--    login.css  -->
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/user/login.css">
     <!-- datePicker's css -->
     <link rel="stylesheet" href="/css/datepicker.min.css" >
 
