--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -54,9 +54,14 @@
         <td>
             <span th:text="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
         </td>
-<!--        <td>-->
-<!--            <button th:text="${board.comments ? '답변완료' : '미답변'}"></button>-->
-<!--        </td>-->
+        <td>
+            <th:block th:each="comment: ${comments}">
+                <th:block th:if="${comment.board.id} == ${board.id}">
+                    <button>답변완료</button>
+                </th:block>
+
+            </th:block>
+        </td>
     </tr>
     </tbody>
 </table>
