--- a/src/main/resources/templates/fragments/link.html
+++ b/src/main/resources/templates/fragments/link.html
@@ -19,6 +19,9 @@
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+
+    <!-- js -->
+    <script defer src="/js/fragments/header.js"> </script>
 </th:block>
 
 
