--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
     <!-- js    -->
     <script defer src="/js/datepicker.js"></script>
     <script defer src="/js/datepicker.ko.js"></script>
+    <script defer src="/js/fragments/header.js"></script>
     <script defer src="/js/index.js"></script>
 
 
