--- a/src/main/resources/templates/admin/insertHotel.html
+++ b/src/main/resources/templates/admin/insertHotel.html
@@ -32,7 +32,8 @@
                     <h1 class="title">호텔 관리 > 호텔 등록</h1>
                 </div>
                 <div class="reservation-table-container">
-                    <span class="text">호텔 등록 공간(호텔 지역, 호텔 이름, 호텔 상세 주소, 호텔 연락처, 객실 종류 및 이미지(+ 아이콘 만들어서 여러 객실을 등록할 수 있도록 하는 js 만들 예정), 호텔 이미지, (호텔 소개에 적을 설명?)</span>
+                    <span class="text">호텔 등록 공간(호텔 지역, 호텔 이름, 호텔 상세 주소, 호텔 연락처, 객실 종류 및 이미지(+ 아이콘 만들어서 여러 객실을 등록할 수 있도록 하는 js 만들 예정), 호텔 이미지, (호텔 소개에 적을 설명?)</span><br><br>
+                    <span class="text">이미지 테이블이 따로 필요할 거 같음.</span>
                 </div>
             </div>
         </div>
