--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,9 +36,9 @@
                 </a>
             </div>
             <div class="hotelArea">
-                <a th:href="@{/hotel/find}" class="link">호텔 찾기</a>
-                <a th:href="@{/hotel/info}" class="link">호텔 소개</a>
-                <a href="#" class="link">고객 문의</a>
+                <a th:href="@{/hotel/find}" class="link" id="hotelFind">호텔 찾기</a>
+                <a th:href="@{/hotel/info}" class="link" id="hotelIntroduction">호텔 소개</a>
+                <a href="#" class="link" id="customerInquiry">고객 문의</a>
             </div>
         </div>
     </div>
