--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/board/list.css">
-    <th:block th:insert="~{/fragments/fragments.html :: headCdns}"></th:block>
+    <th:block th:insert="~{/fragments/link.html :: link_fragment}"></th:block>
     <script defer src="/js/board/list.js"></script>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
 </header>
 
-<h2 style="margin: 20px">게시판</h2>
+<h2 style="margin: 20px">관리자 게시판</h2>
 <form class="row g-3 d-flex justify-content-end" method="get" th:action="@{/board/list}">
     <div class="col-auto">
         <select name="type">
@@ -44,7 +44,7 @@
     </tr>
     </thead>
     <tbody>
-    <!-- CONTENTS !-->
+    <!-- 댓글 !-->
     <tr th:each="board : ${boardList}">
         <td>
             <span th:text="${board.id}"></span>
@@ -61,11 +61,10 @@
             <span th:text="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
         </td>
         <td>
-            <th:block th:each="comment: ${comments}">
+            <th:block th:each="comment: ${commentList}">
                 <th:block th:if="${comment.board.id} == ${board.id}">
                     <button>답변완료</button>
                 </th:block>
-
             </th:block>
         </td>
     </tr>
