--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <th:block th:insert="~{/fragments/fragments.html :: headCdns}"></th:block>
+    <th:block th:insert="~{/fragments/link.html :: link_fragment}"></th:block>
 
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/board/write.css">
